refactor: restore JsonNode for template filter issue with DynamoStreamRecord