@@ -1,7 +1,6 @@
 package it.pagopa.oneid.service;
 
-import com.amazonaws.services.lambda.runtime.events.DynamodbEvent.DynamodbStreamRecord;
-import com.amazonaws.services.lambda.runtime.events.models.dynamodb.StreamRecord;
+import com.fasterxml.jackson.databind.JsonNode;
 import io.quarkus.logging.Log;
 import it.pagopa.oneid.common.connector.CacheConnector;
 import it.pagopa.oneid.common.model.Client;
@@ -17,6 +16,7 @@ public class CacheUpdaterServiceImpl implements CacheUpdaterService {
 
   private final CacheConnector cacheConnector;
   private final DynamoStreamService dynamoStreamService;
+  private final RecordUtils recordUtils;
   private final SnsClient sns;
   private final String snsTopicArn;
 
@@ -24,22 +24,25 @@ public class CacheUpdaterServiceImpl implements CacheUpdaterService {
   CacheUpdaterServiceImpl(
       CacheConnector cacheConnector,
       DynamoStreamService dynamoStreamService,
+      RecordUtils recordUtils,
       SnsClient sns,
       @ConfigProperty(name = "sns_topic_arn") String snsTopicArn) {
     this.cacheConnector = cacheConnector;
     this.dynamoStreamService = dynamoStreamService;
+    this.recordUtils = recordUtils;
     this.sns = sns;
     this.snsTopicArn = snsTopicArn;
   }
 
   @Override
-  public void processInput(List<DynamodbStreamRecord> records) {
-    if (records == null || records.isEmpty()) {
+  public void processInput(JsonNode input) {
+    List<JsonNode> records = recordUtils.readRecords(input);
+    if (records.isEmpty()) {
       Log.info("No DynamoDB records to process");
       return;
     }
 
-    for (DynamodbStreamRecord streamRecord : records) {
+    for (JsonNode streamRecord : records) {
       try {
         processRecord(streamRecord);
       } catch (RuntimeException processingException) {
@@ -50,13 +53,13 @@ public class CacheUpdaterServiceImpl implements CacheUpdaterService {
     }
   }
 
-  private void processRecord(DynamodbStreamRecord streamRecord) {
-    if (streamRecord == null) {
+  private void processRecord(JsonNode streamRecord) {
+    if (streamRecord == null || streamRecord.isNull() || !streamRecord.isObject()) {
       throw new IllegalArgumentException("Invalid DynamoDB stream record");
     }
 
-    String eventName = streamRecord.getEventName();
-    if (StringUtils.isBlank(eventName)) {
+    String eventName = streamRecord.path("eventName").asText();
+    if (eventName.isBlank()) {
       throw new IllegalArgumentException("DynamoDB stream record without eventName");
     }
 
@@ -68,7 +71,7 @@ public class CacheUpdaterServiceImpl implements CacheUpdaterService {
                     "Unable to build client from NEW_IMAGE for eventName=" + eventName);
               });
       case "MODIFY" -> {
-        if (isIncompleteModifyRecord(streamRecord)) {
+        if (recordUtils.isIncompleteModifyRecord(streamRecord)) {
           String clientId = dynamoStreamService.extractClientId(streamRecord, false)
               .orElse("unknown");
           Log.warnf("Skipping MODIFY for clientId=%s because stream images are incomplete",
@@ -101,13 +104,8 @@ public class CacheUpdaterServiceImpl implements CacheUpdaterService {
     }
   }
 
-  private boolean isIncompleteModifyRecord(DynamodbStreamRecord streamRecord) {
-    StreamRecord dynamodb = streamRecord.getDynamodb();
-    return dynamodb == null || dynamodb.getOldImage() == null || dynamodb.getNewImage() == null;
-  }
-
   private void upsertClient(Client client) {
-    if (client == null || StringUtils.isBlank(client.getClientId())) {
+    if (client==null || StringUtils.isBlank(client.getClientId())) {
       throw new IllegalArgumentException("client must include clientId");
     }
     cacheConnector.setClient(client);
